# RPI-Tesseract-Motion-Planning

./: README.md  dependencies.rosinstall
greedy/: CMakeLists.txt  package.xml
greedy/src/: readme.txt
greedy/src/circular_fit/: toolbox_circular_fit.py
greedy/src/data/: cartesian2joint.py
greedy/src/data/from_ge/: Curve_backproj_in_base_frame.csv
greedy/src/greedy_fitting/: command_backproj.csv  fitting_toolbox.py  greedy_simplified.py  greedy_visualization.py  visualization.py
greedy/src/toolbox/: direction2R.py  error_check.py  j_analysis.py  lambda_calc.py  projection.py  robot_def.py  robots_def.py
greedy/src/toolbox/MATLAB/: R2q.m  combine_kinematics.m  fwdkin.m  fwdkiniter_Jdot.m  hat.m  jdot_test.m  q2R.m  quatcomplement.m  quatjacobian.m  quatproduct.m  robotjacobian.m  rot.m  screw_matrix.m  subproblem0.m  subproblem2.m  subproblem3.m  subproblem4.m  unicyclejacobian.m
greedy/src/toolbox/robot_info/: abb6640.yml
robot_application/: CMakeLists.txt  package.xml
robot_motion_planning/: CMakeLists.txt  package.xml
robot_motion_planning/config/: planner_config.yaml  robot.rviz
robot_motion_planning/include/robot_motion_planning/: planner_utils.h
robot_motion_planning/launch/: application_setup.launch
robot_motion_planning/src/: planner_node.cpp  planner_utils.cpp
robot_motion_planning/srv/: PlanTrajectory.srv
robot_motion_planning/task_data/data/: speed_info_gen.py
robot_motion_planning/task_data/data/config/: ABB_6640_180_255_robot_default_config.yml  paintgun.csv
robot_motion_planning/task_data/data/curve_1/baseline/: curve_pose.csv
robot_motion_planning/task_data/data/curve_2/baseline/: curve_pose.csv
robot_motion_planning/task_data/data/toolbox/: MotionSend.py  error_check.py  lambda_calc.py  robots_def.py  utils.py
robot_motion_planning/task_data/tesseract_output/: .~lock.end_waypoints.csv#  end_waypoints.csv  movej_waypoints.csv  tesseract_end.csv
robot_motion_planning/task_data/tesseract_output/curve1_base_frame/: end_waypoints.csv  movej_waypoints.csv
robot_motion_planning/task_data/tesseract_output/curve1_dense/: end_waypoints.csv  movej_waypoints.csv
robot_motion_planning/task_data/tesseract_output/curve2_base_frame/: end_waypoints.csv  movej_waypoints.csv
robot_motion_planning/task_data/tesseract_output/curve2_dense/: end_waypoints.csv  movej_waypoints.csv
rpi_abb_irb6640_180_255_support/: CMakeLists.txt  package.xml
rpi_abb_irb6640_180_255_support/config/: Curve_dense_new_mm.csv  Curve_dense_new_mm2.csv  abb6640.yml  abb_irb6640_180_255.srdf  curve_pose.yaml  kinematic_plugins.yaml  planner_config.yaml  simple_planner_config.yaml  workcell.rviz
rpi_abb_irb6640_180_255_support/launch/: application_setup.launch  test_6640.launch
rpi_abb_irb6640_180_255_support/urdf/: 6640.urdf.xacro  workcell.xacro
