<?xml version="1.0"?>
<package format="2">
  <name>robot_motion_planning</name>
  <version>0.0.0</version>
  <description>The robot_motion_planning package</description>
  <auther email="tiffany.cappellari@swri.org">tcappellari</auther>
  <maintainer email="tiffany.cappellari@swri.org">tcappellari</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rpi_abb_irb6640_180_255_support</depend>
  <depend>std_msgs</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_planning_server</depend>
  <depend>tesseract_process_managers</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
