<?xml version="1.0"?>
<package format="2">
  <name>robot_motion_planning</name>
  <version>0.0.0</version>
  <description>The robot_motion_planning package</description>
  <author email="tiffany.cappellari@swri.org">tcappellari</author>
  <maintainer email="tiffany.cappellari@swri.org">tcappellari</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_planning_server</depend>
  <depend>tesseract_process_managers</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
