<package>
  <name>rpi_abb_irb6640_180_255_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      Support package for the RPI motion planning
    </p>
  </description>
  <author email="tiffany.cappellari@swri.org">tcappellari</author>
  <maintainer email="tiffany.cappellari@swri.org">tcappellari</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>rviz</run_depend>
</package>
